@@ -1,10 +1,11 @@
-    # Starting template
-
-This README will need to contain a description of your project, how to run it, how to set up the development environment, and who worked on it.
-This information can be added throughout the course, except for the names of the group members.
-Add your own name (do not add the names for others!) to the section below.
+# Talio
 
 ## Description of project
+
+Talio is an application similar to a Scrum board on which a team can organize post-it notes that describe the 
+contents of a sprint. Users can work together on a board to split up their work on different lists. Lists can 
+contain multiple cards that describe the job that need to be completed for a list. With these cards, users can 
+easily break down projects into manageable issues that can be assigned to the members of a team.
 
 ## Group members
 
@@ -12,19 +13,24 @@ Add your own name (do not add the names for others!) to the section below.
 |---|---|---|
 | <img src="docs/Pictures/pfp_SSM.png" width="50">| Secuiu Stefan - Maniu | secuiu-1@student.tudelft.nl |
 | <img src="docs/Pictures/profile-picture-chris-obis.png" width="50">| Chris Obis | c.obis-1@student.tudelft.nl |
-| <img src="docs/Pictures/Tymon_Jastrzemski_Picture.jpg" width ="50"/>|Tymon Jastrzemski | T.H.Jastrzemski@student.tudelft.nl|
-| <img src="docs/Pictures/Coman_Tudor_Andrei.jpg" width ="50"/>|Tudor - Andrei Coman | T.A.Coman@student.tudelft.nl|
 | <img src="docs/Pictures/Andrei_Ionita.jpeg" width = "50"/>| Andrei Ionita | A.Ionita@student.tudelft.nl |
-| ![](https://eu.ui-avatars.com/api/?name=OOPP&length=4&size=50&color=DDD&background=777&font-size=0.325) | Marcin Liberadzki | M.M.Liberadzki@student.tudelft.nl |
-
-<!-- Instructions (remove once assignment has been completed -->
-<!-- - Add (only!) your own name to the table above (use Markdown formatting) -->
-<!-- - Mention your *student* email address -->
-<!-- - Preferably add a recognizable photo, otherwise add your GitLab photo -->
-<!-- - (please make sure the photos have the same size) --> 
 
 ## How to run it
 
+To run the application the user will need an IDE that supports java and the javaFX module. 
+Navigate to the client.Main (client/src/main/java/client/Main.java) and 
+server.Main (server/src/main/java/server/Main.java) files then make sure 
+to have in the client.Main configuration the arguments: *--module-path="\path\javafx-sdk-...\lib" --add-modules=javafx.controls,javafx.fxml*  
+After you make sure that the arguments are correctly filled in, just run the client.Main and server.Main.
+
+
 ## How to contribute to it
 
-## Copyright / License (opt.)
+We currently do not accept any more members in the main developing team but we always appreaciate any bug reports that you may find while using the application. If you do, please format any bug reports using this format:  
+1. A description of the encountered problem  
+2. A scenario that describes the context in which a user might
+encounter said problem.  
+3. A description regarding the disruption of the workflow caused
+by the problem.  
+4. Workarounds for said problem.
+5. Suggestions that would solve this problem.  
